crates/runtime-datafusion/src/analyzer_rule/snapshots/runtime_datafusion__analyzer_rule__partitioned_table_scan_rewrite__tests__single_partition_no_union.snap
---
source: crates/runtime-datafusion/src/analyzer_rule/partitioned_table_scan_rewrite.rs
expression: formatted
---
Limit: skip=0, fetch=5
  Sort: test_table.id ASC NULLS LAST
    TableScan: test_table, unsupported_filters=[partition_id = Utf8("0")]
