crates/runtime-datafusion/src/analyzer_rule/snapshots/runtime_datafusion__analyzer_rule__partitioned_table_scan_rewrite__tests__table_scan_rewritten_to_union.snap
---
source: crates/runtime-datafusion/src/analyzer_rule/partitioned_table_scan_rewrite.rs
expression: result.display_indent()
---
SubqueryAlias: test_table
  Union
    TableScan: test_table, unsupported_filters=[partition_id = Utf8("0")]
    TableScan: test_table, unsupported_filters=[partition_id = Utf8("1")]
