crates/runtime-datafusion/src/analyzer_rule/snapshots/runtime_datafusion__analyzer_rule__partitioned_table_scan_rewrite__tests__three_partitions_pushdown.snap
---
source: crates/runtime-datafusion/src/analyzer_rule/partitioned_table_scan_rewrite.rs
expression: formatted
---
Limit: skip=0, fetch=10
  Sort: test_table.id ASC NULLS LAST
    SubqueryAlias: test_table
      Union
        Sort: test_table.id ASC NULLS LAST, fetch=10
          Union
            TableScan: test_table, unsupported_filters=[partition_id = Utf8("0")]
            TableScan: test_table, unsupported_filters=[partition_id = Utf8("1")]
        Sort: test_table.id ASC NULLS LAST, fetch=10
          TableScan: test_table, unsupported_filters=[partition_id = Utf8("2")]
